--- a/lynda/09/package.json
+++ b/lynda/09/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "ws-sample",
+  "name": "sio-server",
   "version": "1.0.0",
-  "description": "A sample of a simple websocket",
-  "main": "ws.js",
+  "description": "A sample socket io server",
+  "main": "sio-server.js",
   "scripts": {
-    "start": "open index.html & node ws"
+    "start": "open http://localhost:3000 & node sio-server.js"
   },
   "keywords": [
-    "Websocket"
+    "Socket",
+    "IO",
+    "Simple",
+    "Sample"
   ],
   "author": "Alex Banks <alex@moonhighway.com> (http://www.moonhighway.com)",
   "license": "MIT",
   "dependencies": {
-    "ws": "^5.1.1"
+    "express": "^4.16.3",
+    "socket.io": "^1.7.4",
+    "socket.io-client": "^1.3.7"
   }
 }
