--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ski-dictionary",
+  "name": "node_practice",
   "version": "1.0.0",
-  "description": "a collection of skier terms",
+  "description": "a collection of nodes exes.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
